# rateio

./: Cargo.toml  README.md
src/: main.rs  money.rs  payment.rs  person.rs  solver.rs
